--- a/ShopFlowers/flowers/templates/pots.html
+++ b/ShopFlowers/flowers/templates/pots.html
@@ -7,114 +7,122 @@
 
 {% block base_content %}
 
-    <section class="hello">
-        <div class="hello-text">
-            <p class="p1">Каталог</p>
-            <div class="list-cat">
-                <div class="cat-plant" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
-                    <a href="{% url 'flowers:flowers' %}">Комнатные растения</a>
-                </div>
+<section class="hello">
+    <div class="hello-text">
+        <p class="p1">Каталог</p>
+        <div class="list-cat">
+            <div class="cat-plant" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
+                <a href="{% url 'flowers:flowers' %}">Комнатные растения</a>
+            </div>
 
-                <div class="cat-pots" style="
-                    border: 1px solid rgba(114, 121, 88, 1);
-                    border-top-left-radius: 20px;
-                    border-top-right-radius: 20px;
-                    border-bottom: none;">
-                    <a href="{% url 'flowers:pots' %}">Горшки и кашпо</a>
-                </div>
-                    
-                <div class="cat-care" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
-                    <a href="{% url 'flowers:care' %}">Уход за растениями</a>
-                </div>
+            <div class="cat-pots" style="
+                border: 1px solid rgba(114, 121, 88, 1);
+                border-top-left-radius: 20px;
+                border-top-right-radius: 20px;
+                border-bottom: none;">
+                <a href="{% url 'flowers:pots' %}">Горшки и кашпо</a>
+            </div>
+
+            <div class="cat-care" style="border-bottom: 1px solid rgba(114, 121, 88, 1);">
+                <a href="{% url 'flowers:care' %}">Уход за растениями</a>
             </div>
         </div>
-    </section>
-
-    <div class="breadcrumb">
-        <ul>
-            <li class="breadcrumb_item"><a href="{% url 'flowers:main' %}">Главная /</a></li>
-            <li class="breadcrumb_item"><a href="{% url 'flowers:flowers' %}">Горшки и кашпо /</a></li>
-        </ul>
     </div>
+</section>
 
-    <section class="shop">
-        <div class="filters">
-            <p>Фильтры</p>
-<!--            <form action="{% url 'flowers:filter' %}" method="get">-->
-                <div class="filter-cat">
+<div class="breadcrumb">
+    <ul>
+        <li class="breadcrumb_item"><a href="{% url 'flowers:main' %}">Главная /</a></li>
+        <li class="breadcrumb_item"><a href="{% url 'flowers:flowers' %}">Горшки и кашпо /</a></li>
+    </ul>
+</div>
+
+<section class="shop">
+    <div class="filters">
+        <form action="{% url 'flowers:filter-pots' %}" method="get" name="filter">
+            <h3 class="title-filter">Категории:</h3>
+            <input type="hidden" class="checked" name="product" value="Горшки">
+            <ul class="filter-ul">
                 {% for category in view.get_category %}
-                <li>
-                    <input type="checkbox" name="category" value="{{ category.id }}">
-                    <label>{{ category.title }}</label>
-                </li>
-                {% endfor %}
-                </div>
-                <br>
-                <div class="filter-price">
                     <li>
-                        <input type="checkbox" name="price" min="0" max="999" id="price-0-1000">
-                        <label for="price-0-1000">до 1000</label>
+                        <input type="checkbox" class="checked" name="category" value="{{ category.id }}">
+                        <span class="">{{ category.title }}</span>
                     </li>
-                    <li>
-                        <input type="checkbox" name="price_from" min="1000" max="5000" id="price-1000-5000">
-                        <label for="price-1000-5000">от 1000 до 5000</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="price_from" min="5000" id="price-5000-inf">
-                        <label for="price-5000-inf">от 5000</label>
-                    </li>
-                </div>
-
-                <button type="submit">Найти</button>
-<!--            </form>-->
-        </div>
-
-        <div class="flowers-list" id="flowers-list-id">
-            {% for pot in pots %}
-                <div class="flower">
-                    {% if pot.is_discount %}
-                        <a href="{% url 'flowers:flower' slug=pot.slug %}">
-                            <img src="{{ pot.image.url }}" width="250px" height="300px">
-                        </a>
-                        <div class="product-discount"><span>{{ pot.discount.percent }}%</span></div>
-                    {% else %}
-                        <a href="{% url 'flowers:flower' slug=pot.slug %}">
-                            <img src="{{ pot.image.url }}" width="250px" height="300px">
-                        </a>
-                    {% endif %}
-                    
-                    <div class="flower-detail">
-                        <p class="p-text">{{ pot.title }}</p>
-                        {% if pot.is_discount %}
-                            <div class="flower-price">
-                                <p class="p-price-discount">от {{ pot.calculate_the_price }}₽</p>
-                                <p class="p-price">{{ pot.price }}₽</p>
-                            </div>
-                        {% else %}       
-                            <p class="p-text">от {{ pot.calculate_the_price }}₽</p>
-                        {% endif %}   
-                         
-                        {% if pot.quantity > 0 %}
-                            <a href="{% url 'cart:add-cart' pot.id %}" class="cart-button">Добавить в корзину</a>
-                        {% else %}
-                            <p style="margin: 5px;">Нет в наличии</p>
-                        {% endif %}
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-
-        <nav class="list-pages">
-            <ul>
-                {% for page in paginator.page_range %}
-                <li class="page-num">
-                    <a href="?page={{ page }}">{{ page }}</a>
-                </li>
                 {% endfor %}
             </ul>
-        </nav>
-    </section>
 
+            <h3 class="title-filter">Цена:</h3>
+            <ul class="filter-ul">
+                <li>
+                    <input type="checkbox" class="checked" name="price" value="extra-price">
+                    <span>До 1000₽</span>
+                </li>
+
+                <li>
+                    <input type="checkbox" class="checked" name="price" value="rare-price">
+                    <span>От 1000₽ до 5000₽</span>
+                </li>
+
+                <li>
+                    <input type="checkbox" class="checked" name="price" value="medium-price">
+                    <span>От 5000₽ до 10000₽</span>
+                </li>
+
+                <li>
+                    <input type="checkbox" class="checked" name="price" value="well-done-price">
+                    <span>От 10000₽</span>
+                </li>
+            </ul>
+            <button type="submit" class="filter-btn">Найти</button>
+        </form>
+        <button class="filter-btn"><a href="{% url 'flowers:pots' %}">Сбросить все</a></button>
+    </div>
+
+    <div class="flowers-list" id="flowers-list-id">
+        {% for pot in pots %}
+            <div class="flower">
+                {% if pot.is_discount %}
+                    <a href="{% url 'flowers:flower' slug=pot.slug %}">
+                        <img src="{{ pot.image.url }}" width="250px" height="300px">
+                    </a>
+                    <div class="product-discount"><span>{{ pot.discount.percent }}%</span></div>
+                {% else %}
+                    <a href="{% url 'flowers:flower' slug=pot.slug %}">
+                        <img src="{{ pot.image.url }}" width="250px" height="300px">
+                    </a>
+                {% endif %}
+
+                <div class="flower-detail">
+                    <p class="p-text">{{ pot.title }}</p>
+                    {% if pot.is_discount %}
+                        <div class="flower-price">
+                            <p class="p-price-discount">от {{ pot.calculate_the_price }}₽</p>
+                            <p class="p-price">{{ pot.price }}₽</p>
+                        </div>
+                    {% else %}
+                        <p class="p-text">от {{ pot.calculate_the_price }}₽</p>
+                    {% endif %}
+
+                    {% if pot.quantity > 0 %}
+                        <a href="{% url 'cart:add-cart' pot.id %}" class="cart-button">Добавить в корзину</a>
+                    {% else %}
+                        <p style="margin: 5px;">Нет в наличии</p>
+                    {% endif %}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <nav class="list-pages">
+        <ul>
+            {% for page in paginator.page_range %}
+            <li class="page-num">
+                <a href="?page={{ page }}">{{ page }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </nav>
+</section>
 
 <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
 <script src="{% static 'js/flowers.js' %}"></script>
