--- a/ShopFlowers/flowers/static/css/main_page.css
+++ b/ShopFlowers/flowers/static/css/main_page.css
@@ -2,76 +2,213 @@ body {
     margin: 0;
 }
 
-.start {
-	background-image: url("../images/start.png");
+@font-face {
+    font-family: 'myFontMirra';
+    src: url('../fonts/Mirra.otf');
+}
+
+.main {
+	background-image: url(../images/main.png);
+	background-size: cover;
+	height: 900px;
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);
+}
+
+.catalog {
+	justify-self: center;
+	align-self: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;	
+}
+
+.catalog-button {
+    padding: 7px 30px 7px 30px;
+	margin: 0 25% 0 25%;
+    border-style: none;
+    background-color: rgba(119, 126, 92, 1);
+    text-align: center;
+    display: inline-block;
+	border-radius: 15px;
+	a {
+		text-decoration: none;	
+		font-size: 15px;	
+		color: rgba(214, 215, 210, 1)		
+	}
+}
+
+.catalog-button:hover {
+    background-color: rgba(209, 216, 184, 1);
+	a {
+    	color: rgba(40, 49, 6, 1);
+	}
+}
+
+.carousel {
+    height: 150px;
+    width: 600px;
+    margin: 100px 10px 100px 10px; 
+    overflow: hidden;  
+    margin: 0 auto;
+}
+
+.courusel-assortment {
+    height: 150px;
+    display: flex;
+    position: relative;
+}
+
+.assortment {
+    width: 150px;
+    transition: 1s;
+}
+
+/* .assortment-control button {
+    font-size: 14pt;
+    border: none;
+    color: rgba(114, 121, 88, 1);
+    font-weight: bold;
+    background: transparent;    
+    position: absolute;
+    top: 800px;
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+}
+
+button.next {
+    right: 225px;
+}
+
+button.prev {
+    left: 220px;
+} */
+
+.assortment-control button:active, .assortment-control button:hover {    
+    color: rgba(114, 121, 88, 1);
+    transform: scale(1);
+    box-shadow: 3px 2px 22px 1px rgba(40, 49, 6, 1);
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+}
+
+/* .courusel-assortment {
+	display: flex;
+	gap: 25px;
+}
+
+.assortment {
+	background: rgba(214, 215, 210, 1);
+	height: 160px;
+	width: 100px;
+	img {
+		margin-left: -70px;
+		align-self: end;
+	}
+} */
+
+
+.about-us {
+	height: 600px;
+	background: rgba(234, 233, 229, 1);
+	display: flex;
+	flex-direction: column;
+}
+
+.about {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	column-gap: 5px;
+	margin: -10px 20px 0 20px;
+}
+
+.abaut-ul {
+	list-style-type: '🌿';
+	color: rgba(40, 49, 6, 1);
+}
+
+.about-hello, .about-our-plus, .about-services {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.about-hello {
+	grid-column: 1/ span 2;
+	grid-row: 1 / span 3;
+}
+
+.about-our-plus {
+	grid-column: 3/ 3;
+	grid-row: 1 / span 3;
+
+}
+
+.about-services {
+	grid-column: 4/ 4;
+	grid-row: 1 / span 3;
 }
 
 
+.news {
+	margin: 10px 0 15px 0;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: 20% 80%;
+}
+
+.news-list {
+	grid-column: 2 / span 3;
+	grid-row: 2;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	p {
+		color: rgba(40, 49, 6, 1);
+		width: 200px;
+		text-align: center;
+	}
+}
+
+.new {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.news-button {
+    padding: 0px 10px 0px 10px;
+	margin: 0 25% 0 25%;
+    border-style: none;
+    background-color: rgba(119, 126, 92, 1);
+    text-align: center;
+    display: inline-block;
+	border-radius: 15px;
+	a {
+		text-decoration: none;	
+		font-size: 15px;	
+		color: rgba(214, 215, 210, 1)		
+	}
+}
+
+.news-button:hover {
+    background-color: rgba(209, 216, 184, 1);
+	a {
+    	color: rgba(40, 49, 6, 1);
+	}
+}
+
 /* 
 @media screen and (min-width: 800px) and (max-width: 1175px){
-	
-	
-	.hit {
-		grid-column: 1 / span 3;
-		grid-row: 3;
-	}
-	
-	.novelty {
-		grid-column: 1 / 1;
-		grid-row: 4 / span 2;
-	}
-	
-	.catalog {
-		grid-column: 2 / span 2;
-		grid-row: 4 / span 1;
-	}
-	
-	.sale {
-		grid-column: 1 / 1;
-		grid-row: 6 / span 2;
-	}
-	
-	.design {
-		grid-column: 2 / 2;
-		grid-row: 5 / span 3;
-	}
-	
-	.other {
-		grid-column: 3 / 3;
-		grid-row: 5 / span 3;
-	}
-
-	.hit {
-		grid-column: 1 / span 3;
-		grid-row: 3;
-	}
-	
-	.novelty {
-		grid-column: 1 / 1;
-		grid-row: 4 / span 2;
-	}
-	
-	.catalog {
-		grid-column: 2 / span 2;
-		grid-row: 4 / span 1;
-	}
-	
-	.sale {
-		grid-column: 1 / 1;
-		grid-row: 6 / span 2;
-	}
-	
-	.design {
-		grid-column: 2 / 2;
-		grid-row: 5 / span 3;
-	}
-	
-	.other {
-		grid-column: 3 / 3;
-		grid-row: 5 / span 3;
-	}
 }
 
 @media screen and (max-width: 799px){
 
-} */
+} 
+*/
