--- a/ShopFlowers/templates/base.html
+++ b/ShopFlowers/templates/base.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="nav_main">
         <div class="logo">
-            <a href="{% url 'flowers:main' %}">FRESH COMPANY</a>
+            <a href="{% url 'flowers:main' %}"><img src="{% static 'images/logo.png' %}" style="background-size: contain;"></a>
         </div>
 
         <div class="networks">
