--- a/ShopFlowers/static/css/base_style.css
+++ b/ShopFlowers/static/css/base_style.css
@@ -10,27 +10,18 @@ body {
 .nav_main {
     display: grid;
     grid-template-columns: 20% 50% 15% 15%;
-    height: 50px;
-   /* position: fixed;
-    transition: top 0.3s;*/
-
+    height: 70px;
+    background: transparent;
 }
 
 nav .logo {
     grid-column: 1;
-    padding-left: 30px;
-    justify-self: start;
-    align-self: center;
-    font-family: 'myFontMirra';
-    font-size: 26pt;
-    a {
-        text-decoration: none;
-        color: black;
-    }
+    padding-left: 20px;
 }
 
 .logo img {
-    height: 50px;
+    width: 120px;
+    height: 60px;
 }
 
 nav .networks {
@@ -39,18 +30,6 @@ nav .networks {
     gap: 20px;
     justify-self: center;
     align-self: center;
-}
-
-.networks a {
-    text-decoration: none;
-    color: rgba(40, 49, 6, 1);
-    border-bottom: none;
-}
-
-.networks a:hover {
-    text-decoration: none;
-    color: rgba(119, 126, 92, 1);
-    border-bottom: none;
 }
 
 nav .find {
@@ -139,6 +118,7 @@ nav .user{
     color: rgba(40, 49, 6, 1);
     font-family: 'myFontMirra';
     font-size: 14pt;
+    font-weight: bold;
     display: grid;
     grid-template-columns: 70% 30%;
 }
